[build-system]
requires = ["setuptools>=61.0.0"]
build-backend = "setuptools.build_meta"

[project]
name = "developer-achievements-engine"
version = "1.0.0"
description = "Retro dark-themed developer dashboard scanning Git activity and yielding badges and achievements."
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "pytest>=7.0.0"
]

[tool.pytest.ini_options]
testpaths = ["tests"]
